--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "brain-games-s220",
   "version": "0.0.1",
   "description": "Brain Games from Hexlet projects",
-  "main": "index.js",
+  "main": "dist/index.js",
   "bin": {
     "brain-games": "dist/bin/brain-games.js"
   },
