--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games-s220",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Brain Games from Hexlet projects",
   "main": "dist/index.js",
   "bin": {
@@ -22,5 +22,8 @@
     "babel-core": "*",
     "babel-preset-env": "*",
     "babel-preset-stage-0": "*"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.7"
   }
 }
