--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games-s220",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Brain Games from Hexlet projects",
   "main": "dist/index.js",
   "bin": {
@@ -13,6 +13,7 @@
     "babel-node": "babel-node",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
     "prepublishOnly": "npm run build",
+    "eslint": "eslint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -20,8 +21,12 @@
   "devDependencies": {
     "babel-cli": "*",
     "babel-core": "*",
+    "babel-eslint": "^8.2.1",
     "babel-preset-env": "*",
-    "babel-preset-stage-0": "*"
+    "babel-preset-stage-0": "*",
+    "eslint": "^4.16.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0"
   },
   "dependencies": {
     "readline-sync": "^1.4.7"
