--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "brain-games-s220",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Brain Games from Hexlet projects",
   "main": "dist/index.js",
   "bin": {
-    "brain-games": "dist/bin/brain-games.js"
+    "brain-games": "dist/bin/brain-games.js",
+    "brain-even": "dist/bin/brain-even.js"
   },
   "files": [
     "dist"
