--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "brain-games-s220",
-  "version": "0.0.6",
+  "version": "0.0.10",
   "description": "Brain Games from Hexlet projects",
   "main": "dist/index.js",
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
+    "brain-calc": "dist/bin/brain-calc.js",
     "brain-even": "dist/bin/brain-even.js"
   },
   "files": [
