--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "brain-games-s220",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Brain Games from Hexlet projects",
   "main": "dist/index.js",
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
     "brain-calc": "dist/bin/brain-calc.js",
     "brain-gcd": "dist/bin/brain-gcd.js",
+    "brain-balance": "dist/bin/brain-balance.js",
     "brain-even": "dist/bin/brain-even.js"
   },
   "files": [
