--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games-s220",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "Brain Games from Hexlet projects",
   "main": "dist/index.js",
   "bin": {
@@ -8,6 +8,7 @@
     "brain-calc": "dist/bin/brain-calc.js",
     "brain-gcd": "dist/bin/brain-gcd.js",
     "brain-balance": "dist/bin/brain-balance.js",
+    "brain-progression": "dist/bin/brain-progression.js",
     "brain-even": "dist/bin/brain-even.js"
   },
   "files": [
