--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games-s220",
-  "version": "0.1.6",
+  "version": "0.2.0",
   "description": "Brain Games from Hexlet projects",
   "main": "dist/index.js",
   "bin": {
@@ -9,6 +9,7 @@
     "brain-gcd": "dist/bin/brain-gcd.js",
     "brain-balance": "dist/bin/brain-balance.js",
     "brain-progression": "dist/bin/brain-progression.js",
+    "brain-prime": "dist/bin/brain-prime.js",
     "brain-even": "dist/bin/brain-even.js"
   },
   "files": [
